--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
+    "twilio": "^4.8.0",
     "whatsapp-web.js": "^1.19.4"
   }
 }
