--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
+    "razorpay": "^2.8.6",
     "whatsapp-web.js": "^1.19.4"
   }
 }
