--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
     "googleapis": "^112.0.0",
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.20",
