--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@google-cloud/firestore": "^7.2.0",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "googleapis": "^129.0.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
+    "puppeteer": "^21.9.0",
     "qrcode-terminal": "^0.12.0",
     "razorpay": "^2.9.2",
     "whatsapp-web.js": "^1.23.0"
